# chunkdrive

./: .gitignore  Cargo.toml  Dockerfile.template  README.md  shell.nix  start.sh
src/: bucket.rs  global.rs  main.rs  shell.rs  stored.rs
src/blocks/: block.rs  direct_block.rs  indirect_block.rs  mod.rs  stored_block.rs
src/encryption/: aes.rs  encryption.rs  mod.rs  none.rs
src/inodes/: directory.rs  file.rs  inode.rs  metadata.rs  mod.rs
src/s3/: s3.rs
src/services/: service.rs
src/services/http/: mod.rs  service.rs
src/services/http/html/components/: directory_entry.rs  layout.rs  mod.rs
src/services/http/html/routes/: directory_index.rs  error_page.rs  mod.rs
src/sources/: discord_webhook.rs  github_releases.rs  local.rs  mod.rs  source.rs
src/tests/: block.rs  bucket.rs  direct_block.rs  mod.rs  stored.rs  utils.rs
static_web/: script.js  style.css
web/: package-lock.json  package.json
